<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">BookingRoom</string>
    <!-- Order of weekday/day label in week view -->
    <string name="weekday_day">%1$s %2$s</string>
    
    
    
    <!--  Add meeting -->
    <string name="meetingHeaderText">Meeting</string>
    <string name="meetingLabelText">Title</string>
    <string name="scheduleHeaderText">
        <u>Schedule</u>
    </string>
    <string name="scheduleStartLabel">Start</string>
    <string name="scheduleEndLabel">End</string>
    <string name="contactHeaderText">
        <u>Your contact details</u>
    </string>
    <string name="contactNameLabel">Name</string>
    <string name="contactEmailLabel">Email</string>
    <string name="buttonOK">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonDelete">Delete</string>
    <string name="hintTitle">Describe your meeting</string>
    <string name="hintName">Your name</string>
    <string name="hintEmail">Your email address</string>
    <string name="bookAdmin">Book as admin</string>
    
    <!-- Week view -->
    <string name="next_week">Next week</string>
    <string name="previous_week">Previous week</string>
    <string name="go_to_today">Go to today</string>
    
    <!-- About -->
    <string name="aboutTxt">
        (C) AndroidAalto 2011\n\
        <b>http://androidaalto.org/bookingroom/</b>
        \n\n\
        <b>Authors:</b>
        @j_u_s_h @hleinone @josepmariaroca @gellevi\n\n\
        <b>Source code:</b>
        https://github.com/AndroidAalto/BookingRoom\n\ Released under GNU General Public License version 3\n\
    </string>
    
    <!-- Screensaver -->
    <string name="screensaver_msg">Touch me!</string>
</resources>