<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:id="@+id/scrollview"
    style="@style/background"
    android:layout_height="fill_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="20dip"
        android:paddingLeft="10dip">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meetingComponent">

            <TextView
                style="@style/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meetingHeaderText"
                android:id="@+id/meetingHeader">
            </TextView>
            
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="5dip"
                android:layout_below="@+id/meetingHeader"
                android:text="Change date"
                android:id="@+id/buttonDateSelector">
            </Button>

            <TextView
                style="@style/normalText"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonDateSelector"
                android:text="@string/meetingLabelText"
                android:id="@+id/titleLabel">
            </TextView>

            <EditText
                style="@style/sEdit"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_below="@+id/titleLabel"
                android:hint="@string/hintTitle"
                android:maxLength="@string/max_meeting_title_length"
                android:id="@+id/titleEdit">
            </EditText>

        </RelativeLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scheduleComponent">

            <TextView
                style="@style/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scheduleHeaderText"
                android:id="@+id/scheduleHeader">
            </TextView>

            <TextView
                style="@style/timerText"
                android:layout_width="90dip"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scheduleHeader"
                android:text="@string/scheduleStartLabel"
                android:id="@+id/startLabel">
            </TextView>

            <!-- http://stackoverflow.com/questions/6790917/setting-android-timepicker-in-xml -->
            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/startLabel"
                android:layout_marginTop="70dip"
                android:id="@+id/startPicker">
            </TimePicker>

            <TextView
                style="@style/timerText"
                android:layout_width="90dip"
                android:layout_height="wrap_content"
                android:layout_below="@+id/startPicker"
                android:text="@string/scheduleEndLabel"
                android:id="@+id/endLabel">
            </TextView>

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_toRightOf="@+id/endLabel"
                android:layout_below="@+id/startPicker"
                android:id="@+id/endPicker">
            </TimePicker>
        </RelativeLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contactComponent">

            <TextView
                style="@style/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactHeaderText"
                android:id="@+id/contactHeader">
            </TextView>

            <TextView
                style="@style/normalText"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contactHeader"
                android:text="@string/contactNameLabel"
                android:id="@+id/nameLabel">
            </TextView>

            <EditText
                style="@style/sEdit"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameLabel"
                android:singleLine="true"
                android:hint="@string/hintName"
                android:maxLength="@string/max_user_name_length"
                android:id="@+id/nameEdit">
            </EditText>

            <TextView
                style="@style/normalText"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameEdit"
                android:text="@string/contactEmailLabel"
                android:id="@+id/emailLabel">
            </TextView>

            <EditText
                style="@style/sEdit"
                android:hint="@string/hintEmail"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_below="@+id/emailLabel"
                android:maxLength="@string/max_user_mail_length"
                android:inputType="textEmailAddress"
                android:id="@+id/emailEdit">
            </EditText>

        </RelativeLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:gravity="center_vertical|center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:id="@+id/buttonsComponent">

            <Button
                style="@style/sButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonOK"
                android:id="@+id/buttonOK">
            </Button>

            <Button
                style="@style/sButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonOK"
                android:layout_marginTop="10dip"
                android:text="@string/buttonCancel"
                android:id="@+id/buttonCancel">
            </Button>

            <Button
                style="@style/sButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonCancel"
                android:text="@string/buttonDelete"
                android:id="@+id/buttonDelete"
                android:layout_marginTop="10dip"
                android:textColor="#FF0000"
                android:visibility="gone">
            </Button>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>